--- a/app/employees/employee-add.component.html
+++ b/app/employees/employee-add.component.html
@@ -1,77 +1,78 @@
-<div class = "container">
-    <form [formGroup] = "employeeForm" (ngSubmit)="onSubmit(employeeForm)" class = "form-horizontal" >
-        <div class = "form-group">
-            <label class="control-label col-sm-2 " for = "text">
-                First name: </label>
-            <div class = "col-sm-4">
-                <input formControlName = "firstName" type = "text" class = "form-control" 
-                 placeholder="Enter first name">
-            </div>         
-        </div>   
-        <div class = "form-group">
-            <label class="control-label col-sm-2" for = "text">
-                 Last name: </label>
-            <div class = "col-sm-4">
-                 <input formControlName = "lastName" type = "text" class = "form-control" 
-                 placeholder="Enter last name">
-            </div>         
-        </div>
-         
-        <div class = "form-group">
-            <label class="control-label col-sm-2" for = "text">
-                 Phone number: </label>
-            <div class = "col-sm-4">
-                 <input formControlName ="phoneNumber" type = "text" class = "form-control" 
-                 placeholder="Enter phone number">
-            </div>         
-        </div>
-        <div class = "form-group">
-            <label class="control-label col-sm-2" for = "text">
-                 Mobile phone number: </label>
-            <div class = "col-sm-4">
-                 <input formControlName="mobileNumber" type = "text" class = "form-control" 
-                 placeholder="Enter mobile phone number">
-            </div>         
-        </div>
-        <div class = "form-group">
-            <label class="control-label col-sm-2" for = "text">
-                 Office address: </label>
-            <div class = "col-sm-4">
-                 <textarea formControlName="officeAddress" class = "form-control"
-                 placeholder="Enter office address"></textarea>
-            </div>         
-        </div>
-        <div class = "form-group">
-            <label class="control-label col-sm-2" for = "text">
-                 Email: </label>
-            <div class = "col-sm-4">
-                 <input formControlName="emailAddress" type = "text" class = "form-control"
-                 placeholder="Enter e-mail">
-            </div>         
-        </div>
-        <div class = "form-group">
-            <label class="control-label col-sm-2" for = "teamId">
-                 Select team: </label>
-            <div class = "col-sm-4">
-             <!--   <select id = "selectTeam" class = "form-control" 
-                        formControlName="selectTeam" [(ngModel)] ="employee.teamId"  #selectTeam =ngModel > -->
-                <select id="selTeam" 
-                class="form-control" [(ngModel)] ="employee.teamId" name="selTeam" #selTeam="ngModel" >    
-                    <option value=""></option>>
-                    <option *ngFor = 'let team of teams' >
-                         {{team.teamId}} {{team.teamName}} 
-                    </option>
-                    
-                </select>
-            </div>         
-        </div>    
+<div class="container">
+    <form id="employeeForm" (ngSubmit)="onSubmit(employeeForm)" class="form-horizontal" #employeeForm="ngForm" role="form">
+        <div class="form-group">
 
-        <div class="form-group">        
-            <div class="col-sm-offset-2 col-sm-10">
-                <button type="submit" class="btn btn-default">Add employee</button>
+             <div class = "form-group">
+                <label class="control-label col-sm-2" for = "team">
+                    Select team: </label>
+                <div class = "col-sm-4">
+                    <select id="team" class="form-control" [(ngModel)]="employee.team" name="team" #teamId="ngModel">    
+                        <option value=""></option>>
+                        <option *ngFor = 'let team of teams' [ngValue] ="team">
+                            {{team.teamId}} {{team.teamName}} 
+                        </option>
+                    </select>
+                </div>
+            </div>
+
+
+            <div class="form-group">
+                <label class="control-label col-sm-2 " for="text">
+                    First name: </label>
+                <div class="col-sm-4">
+                    <input type="text" class="form-control" id="firstName" placeholder="Enter first name"
+                        [(ngModel)]="employee.firstName" name="firstName" #firstName="ngModel" >  
+                </div>         
+            </div>   
+            <div class = "form-group">
+                <label class="control-label col-sm-2" for = "text">
+                    Last name: </label>
+                <div class = "col-sm-4">
+                <input type="text" class="form-control" id="lastName" placeholder="Enter last name"
+                        [(ngModel)]="employee.lastName" name="lastName" #lastName="ngModel" >  
+                </div>         
+            </div>
+            
+            <div class = "form-group">
+                <label class="control-label col-sm-2" for = "text">
+                    Phone number: </label>
+                <div class = "col-sm-4"> 
+                    <input type="text" class="form-control" id="phoneNumber" placeholder="Enter phone number"
+                        [(ngModel)]="employee.phoneNumber" name="phoneNumber" #phoneNumber="ngModel" >  
+                </div>         
+            </div>
+            <div class = "form-group">
+                <label class="control-label col-sm-2" for = "text">
+                    Mobile phone number: </label>
+                <div class = "col-sm-4">
+                    <input type="text" class="form-control" id="mobileNumber" placeholder="Enter mobile number"
+                        [(ngModel)]="employee.mobileNumber" name="mobileNumber" #mobileNumber="ngModel" >  
+                </div>         
+            </div>
+            <div class = "form-group">
+                <label class="control-label col-sm-2" for = "text">
+                    Office address: </label>
+                <div class = "col-sm-4">
+                    <textarea id="officeAddress" class = "form-control"
+                    [(ngModel)]="employee.officeAddress" name="officeAddress" #officeAddress="ngModel" 
+                    placeholder="Enter office address"></textarea>
+                </div>         
+            </div>
+            <div class = "form-group">
+                <label class="control-label col-sm-2" for = "text">
+                    Email: </label>
+                <div class = "col-sm-4">
+                  <input type="text" class="form-control" id="Email" placeholder="Enter e-mail address"
+                        [(ngModel)]="employee.emailAddress" name="emailAddress" #emailAddress="ngModel" >  
+                </div>         
+            </div>
+           
+            <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                    <button type="submit" class="btn btn-default">Add employee</button>
+                </div>
             </div>
         </div>
-  
     </form>
 
-</div>    
+    </div>
