--- a/app/employees/employee-edit.component.html
+++ b/app/employees/employee-edit.component.html
@@ -1,78 +1,80 @@
-<div class = "container">
-    <form class = "form-horizontal" 
-       *ngIf ="employee" 
-     >
-        <div class = "form-group">
-            <label class="control-label col-sm-2 " for = "firstName">
-                First name: </label>
-            <div class = "col-sm-4">
-                <input type = "text" class = "form-control" id="firstName"
-                 [(ngModel)]="employee.firstName" name = "firstName"
-                 #name = "ngModel" >
-            </div>         
-        </div>    
-        <div class = "form-group">
-            <label class="control-label col-sm-2" for = "lastName">
-                 Last name: </label>
-            <div class = "col-sm-4">
-                 <input type = "text" class = "form-control" id="lastName"
-                 [(ngModel)]="employee.lastName" name = "lastName"
-                 #name = "ngModel" >
-            </div>         
-        </div>
-        <div class = "form-group">
-            <label class="control-label col-sm-2" for = "phoneNumber">
-                 Phone number: </label>
-            <div class = "col-sm-4">
-                 <input type = "text" class = "form-control" id="phoneNumber"
-                 [(ngModel)]="employee.phoneNumber" name = "phoneNumber"
-                 #name = "ngModel" >
-            </div>         
-        </div>
-        <div class = "form-group">
-            <label class="control-label col-sm-2" for = "mobileNumber">
-                 Mobile phone number: </label>
-            <div class = "col-sm-4">
-                 <input type = "text" class = "form-control" id="mobileNumber"
-                 [(ngModel)]="employee.mobileNumber" name = "mobileNumber"
-                 #name = "ngModel" >
-            </div>         
-        </div>
-        <div class = "form-group">
-            <label class="control-label col-sm-2" for = "officeAddress">
-                 Office address: </label>
-            <div class = "col-sm-4">
-                 <textarea class = "form-control" id="officeAddress"
-                 [(ngModel)]="employee.officeAddress" name = "officeAddress"
-                 #name = "ngModel" >></textarea>
-            </div>         
-        </div>
-        <div class = "form-group">
-            <label class="control-label col-sm-2" for = "emailAddress">
-                 Email: </label>
-            <div class = "col-sm-4">
-                 <input type = "text" class = "form-control" id="emailAddress"
-                 [(ngModel)]="employee.emailAddress" name = "emailAddress"
-                 #name = "ngModel" >
-            </div>         
-        </div>
-        <div class = "form-group">
-            <label class="control-label col-sm-2" for = "teamName">
-                 Select team: </label>
-            <div class = "col-sm-4">
-                <select class = "form-control" id="teamName" >
-                    <option *ngFor = 'let team of teams'> 
-                       ID:  {{team.teamId}} {{team.teamName}}
-                    </option>  
-                </select>
-            </div>         
-        </div>
-        <div class="form-group">        
-            <div class="col-sm-offset-2 col-sm-10">
-                <button type="submit" class="btn btn-default">Edit employee</button>
+
+<div class="container">
+    <form id="employeeForm" (ngSubmit)="onSubmit(employeeForm)" class="form-horizontal" #employeeForm="ngForm" role="form"   >
+        <div class="form-group">
+
+             <div class = "form-group">
+                <label class="control-label col-sm-2" for = "teamId">
+                    Select team: </label>
+                <div class = "col-sm-4">
+                    <select id="teamId" class="form-control" [(ngModel)]="employee.teamId" name="teamId" #teamId="ngModel">    
+                        <option value=""></option>>
+                        <option *ngFor = 'let team of teams' [ngValue] ="team">
+                            {{team.teamId}} {{team.teamName}} 
+                        </option>
+                    </select>
+                </div>
+            </div>
+
+
+            <div class="form-group">
+                <label class="control-label col-sm-2 " for="text">
+                    First name: </label>
+                <div class="col-sm-4">
+                    <input type="text" class="form-control" id="firstName" placeholder="Enter first name"
+                        [(ngModel)]="employee.firstName" name="firstName" #firstName="ngModel" >  
+
+                </div>         
+            </div>   
+            <div class = "form-group">
+                <label class="control-label col-sm-2" for = "text">
+                    Last name: </label>
+                <div class = "col-sm-4">
+                <input type="text" class="form-control" id="lastName" placeholder="Enter last name"
+                        [(ngModel)]="employee.lastName" name="lastName" #lastName="ngModel" >  
+                </div>         
+            </div>
+            
+            <div class = "form-group">
+                <label class="control-label col-sm-2" for = "text">
+                    Phone number: </label>
+                <div class = "col-sm-4"> 
+                    <input type="text" class="form-control" id="phoneNumber" placeholder="Enter phone number"
+                        [(ngModel)]="employee.phoneNumber" name="phoneNumber" #phoneNumber="ngModel" >  
+                </div>         
+            </div>
+            <div class = "form-group">
+                <label class="control-label col-sm-2" for = "text">
+                    Mobile phone number: </label>
+                <div class = "col-sm-4">
+                    <input type="text" class="form-control" id="mobileNumber" placeholder="Enter mobile number"
+                        [(ngModel)]="employee.mobileNumber" name="mobileNumber" #mobileNumber="ngModel" >  
+                </div>         
+            </div>
+            <div class = "form-group">
+                <label class="control-label col-sm-2" for = "text">
+                    Office address: </label>
+                <div class = "col-sm-4">
+                    <textarea id="officeAddress" class = "form-control"
+                    [(ngModel)]="employee.officeAddress" name="officeAddress" #officeAddress="ngModel" 
+                    placeholder="Enter office address"></textarea>
+                </div>         
+            </div>
+            <div class = "form-group">
+                <label class="control-label col-sm-2" for = "text">
+                    Email: </label>
+                <div class = "col-sm-4">
+                  <input type="text" class="form-control" id="Email" placeholder="Enter e-mail address"
+                        [(ngModel)]="employee.emailAddress" name="emailAddress" #emailAddress="ngModel" >  
+                </div>         
+            </div>
+           
+            <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                    <button type="submit" class="btn btn-default">Add employee</button>
+                </div>
             </div>
         </div>
-  
     </form>
 
-</div>    
+    </div>
