--- a/app/employees/employee-list.component.html
+++ b/app/employees/employee-list.component.html
@@ -31,7 +31,7 @@
                 <tbody>
                     <tr *ngFor = 'let employee of employees | employeeFilter:listFilter ' >
                         <td><a [routerLink] = "['/employee' , employee.employeeId]">
-                        {{employee.teamId.teamId}}</a></td>
+                        {{employee.team.teamId}}</a></td>
                         <td> 
                             {{employee.firstName}}
                         </td> 
