--- a/employees/employee-add.component.html
+++ b/employees/employee-add.component.html
@@ -58,7 +58,7 @@
                 <label class="control-label col-sm-2" for="text">
                     Email: </label>
                 <div class="col-sm-4">
-                    <input type="text" class="form-control" id="Email" placeholder="Enter e-mail address" [(ngModel)]="employee.emailAddress"
+                    <input type="text" class="form-control" id="email" placeholder="Enter e-mail address" [(ngModel)]="employee.emailAddress"
                         name="emailAddress" #emailAddress="ngModel">
                 </div>
             </div>
