--- a/employees/employee-select.component.html
+++ b/employees/employee-select.component.html
@@ -5,8 +5,10 @@
                 <label class="control-label col-sm-2" for="employee">
                     Select employee: </label>
                 <div class="col-sm-4">
-                    <select id="employee" class="form-control" [(ngModel)]="employee" name="employee" #employeeId="ngModel">    
-                        <option *ngFor = 'let employee of employees' [ngValue] ="employee">
+                    <select id="employee" class="form-control" 
+                    [(ngModel)]="employee" name="employee" #employeeId="ngModel" required>   
+                        <option value = ""></option>
+                        <option *ngFor = 'let employee of employees' [ngValue] = "employee" >
                             {{employee.employeeId}} {{employee.firstName}} {{employee.lastName}} 
                         </option>
                     </select>
@@ -14,8 +16,8 @@
             </div>
             <div class="col-sm-4" style="display: inline-block">
                 <div class="col-sm-offset-8 col-sm-12">
-                    <button (click)="editEmployee()" class="btn btn-default">Edit employee</button>
-                    <button (click)="deleteEmployee()" class="btn btn-default">Delete employee</button>
+                    <button [disabled] ="!selectEmployeeForm.valid || !selectEmployeeForm.touched" (click)="editEmployee()" class="btn btn-default">Edit employee</button>
+                    <button [disabled] ="!selectEmployeeForm.valid || !selectEmployeeForm.touched " (click)="deleteEmployee()" class="btn btn-default">Delete employee</button>
                 </div>
             </div>
         </div>
