--- a/app.component.html
+++ b/app.component.html
@@ -3,7 +3,19 @@
             <div class = 'container-fluid'>
                 <a class = 'navbar-brand'>{{pageTitle}}</a>
                 <ul class = 'nav navbar-nav'>
-                    <li><a href ="#"> Home </a></li>
+                    <li class = "dropdown">
+                        <a href="#" class="dropdown-toggle" 
+                            data-toggle="dropdown" 
+                            role="button" 
+                            aria-haspopup="true" 
+                            aria-expanded="false">
+                            Login
+                            <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu" role = "menu">
+                            <li><a [routerLink] = "['/login']">Login</a></li> 
+                        </ul>  
+                    </li>
                     <li class = "dropdown">
                         <a href="#" class="dropdown-toggle" 
                             data-toggle="dropdown" 
@@ -67,6 +79,9 @@
                         </a>
                         <ul class="dropdown-menu" role = "menu">
                             <li><a [routerLink] = "['/addBonusList']">Add Bonus List</a></li> 
+                            <li><a [routerLink] = "['/bonusLists']">Show Bonus Lists</a></li>
+                            <li><a [routerLink] = "['/distribute']">Distribute</a></li> 
+                            
                             <!--  -->
                             <li><a href="#">Edit Bonus List</a></li>
                             <!-- a [routerLink] = "['/editEmployee']" -->
