--- a/login/login.component.html
+++ b/login/login.component.html
@@ -1,20 +1,27 @@
-<div class="alert alert-danger" ng-show="controller.error">
-    There was a problem logging in. Please try again.
+<div class = "login">
+<div class="container">
+    <form id="loginForm" (ngSubmit)="loginMe()" class="form-horizontal" #loginForm="ngForm" role="form">
+        <div class="form-group">
+            <div class="form-group">
+                <label class="control-label col-sm-2" for="login">
+                    Login: </label>
+                <div class="col-sm-4">
+                    <input type="text" class="form-control" id="login" name="login" [(ngModel)] = "login">
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label col-sm-2" for="text">
+                    Password: </label>
+                <div class="col-sm-4">
+                    <input type="password" class="form-control" id="password" name="password"  [(ngModel)] = "password">
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                    <button type="submit" class="btn btn-default">Login</button>
+                </div>
+            </div>
+        </div>
+    </form>
 </div>
-<form id ="loginForm" role="form" (ngSubmit)="controller.login()">
-    <div class="form-group">
-        <label for="username">
-            Username(E-mail):
-        </label> 
-        <input type="text"
-            class="form-control" id="username" name="username" [(ngModel)]="controller.credentials.username"/>
-    </div>
-    <div class="form-group">
-        <label for="password">
-            Password:
-        </label> 
-        <input type="password"
-            class="form-control" id="password" name="password" [(ngModel)]="controller.credentials.password"/>
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+</div>
